// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <div>
    <input
      class="sc-AxirZ ePAcNv"
      color="success"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <div>
    <input
      class="sc-AxirZ gFXCtD"
      color="danger"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a primary color 1`] = `
<div>
  <div>
    <input
      class="sc-AxirZ euglxs"
      color="primary"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <div>
    <input
      class="sc-AxirZ ePAcNv"
      color="success"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <div>
    <input
      class="sc-AxirZ jqkRsq"
      color="warning"
      type="radio"
    />
  </div>
</div>
`;
